[tool.poetry]
name = "dm-screen"
version = "0.1.0"
description = ""
authors = ["rrustvold <rrustvold@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
